--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+snake-clone (1.0.0-1ubuntu2) UNRELEASED; urgency=medium
+
+  * fix Section 
+
+ -- Jinseok Kim <jinseok1001@hotmail.com>  Wed, 09 Jun 2021 14:21:44 +0900
+
 snake-clone (1.0.0-1ubuntu1) hirsute; urgency=medium
 
   * stage file 
