--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+snake-clone (1.0.1-1ubuntu1) hirsute; urgency=medium
+
+  * Fix control file
+
+ -- Jinseok Kim <jinseok1001@hotmail.com>  Fri, 11 Jun 2021 06:21:37 +0900
+
 snake-clone (1.0.1-1) hirsute; urgency=medium
 
   * FIX
