--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+snake-clone (1.0.1-1ubuntu7) focal; urgency=medium
+
+  * add focal
+
+ -- Jinseok Kim <jinseok1001@hotmail.com>  Wed, 23 Mar 2022 12:14:59 +0900
+
 snake-clone (1.0.1-1ubuntu6) impish; urgency=medium
 
   * fix package
