--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+snake-clone (1.0.3) UNRELEASED; urgency=medium
+
+  * build-receipe
+
+ -- Jinseok Kim <fmowl-wsl@FmowlPC.localdomain>  Wed, 27 Apr 2022 13:46:11 +0900
+
 snake-clone (1.0.1-2ubuntu1) focal; urgency=medium
 
   * update debian packaging files
